actualizacion de etiqueta meta

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <link rel="shortcut icon" href="/LOGO.png">
-  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
   <title>Presupuestador - Pisox</title>
   <link rel="stylesheet" href="css/style.css">
