actualizacion 2 de decimale, correcion de error NaN

--- a/public/index.html
+++ b/public/index.html
@@ -321,7 +321,7 @@ function calcularTotalesManoDeObra() {
   minimumFractionDigits: 2,
   maximumFractionDigits: 2
 })}`;
-
+return subtotalTrabajos;
 }
 
 function calcularTotalesMateriales() {
